--- a/exemplos_fundweb/02_css_gridlayout/style.css
+++ b/exemplos_fundweb/02_css_gridlayout/style.css
@@ -18,6 +18,11 @@ h1 {
 }
 
 .container {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 2fr));
+    /* grid-template: 1fr 2fr / 2fr 1fr; */
+    /* grid-template-rows: 1fr 2fr; */
+    gap: 2rem;
     border: 1px dotted red;
     background-color: linen;
     margin: 30px 30px;
