--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,34 +5,21 @@
     box-sizing: border-box;
     text-decoration: none;
     outline: none;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Cinzel', sans-serif;
 }
 
 /* === VARIÁVEIS === */
 :root {
     /* Cores */
-    --purple-50:  #f4eaff; 
-    --purple-100: #e9dcfa; 
-    --purple-200: #cdb3f0; 
-    --purple-300: #b186e5; 
-    --purple-400: #9460db; 
-    --purple-500: #6b36c8; 
-    --purple-600: #5b2ca0; 
-    --purple-700: #4c2177; 
-    --purple-800: #441f88; 
-    --purple-900: #2a0e4d; 
-    --gray-100: #f5f5f5;
-    --gray-200: #e8e8e8;
-    --gray-400: #505861;
-    --black-800: #171717;
-    --white: #ffffff;
-    --error: #e63946;
+  --purple-dark: #39154d;
+  --purple: #5c1d78;
+  --green-200: #247546;
+  --green: #00E599;
+  --gold: #f6dba5;
 
-    /* Sombras */
-    --shadow-sm: 0 0.25rem 0.5rem #0000000D;
-    --shadow-md: 0 0.25rem 0.75rem #6B36C84D;
-    --shadow-lg: 0 0.5rem 1.5rem #6B36C833;
-    --shadow-focus: 0 0 0 0.25rem #6B36C81A;
+/* Sombras */
+  --shadow-md: 0 0.25rem 0.75rem #6B36C84D;
+  --shadow-lg: 0 0.5rem 1.5rem #6B36C833;
 }
 
 /* Estilos Globais */
@@ -45,8 +32,8 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: var(--white);
-    color: var(--black-800)
+    background-color: var(--purple-dark);
+    color: var(--gold)
 }
 
 main{
@@ -72,25 +59,25 @@ button{
 
 .botao{
     border: none;
-    color: var(--white);
-    background-color: var(--purple-500);
+    color: var(--gold);
+    background-color: var(--green-200);
 }
 
 .botao:hover {
-    background-color: var(--purple-800);
+    background-color: var(--purple);
     box-shadow: var(--shadow-md);
     transform: translateY(-0.25rem);
 }
 
 .botao-outline{
-    border: 0.25rem solid var(--purple-500);
+    border: 0.25rem solid var(--green-200);
     color: var(--purple-500);
     background-color: transparent;
 }
 
 .botao-outline:hover {
-    background-color: var(--purple-500);
-    color: var(--white);
+    background-color: var(--purple);
+    color: var(--gold);
     box-shadow: var(--shadow-md);
     transform: translateY(-0.25rem);
 }
@@ -102,8 +89,8 @@ button{
     top: 0;
     width: 100%;
     height: 5rem;
-    background-color: var(--purple-800);
-    border-bottom: 0.5rem solid var(--gray-200);
+    background-color: var(--purple);
+    border-bottom: 0.2rem solid var(--green);
     box-shadow: var(--shadow-sm);
     z-index: 1000;
 }
@@ -120,7 +107,7 @@ button{
 
 .menu_container a{
     font-weight: 600;
-    color: var(--white);
+    color: var(--gold);
     transition: color 0.3s ease;
 }
 
@@ -172,20 +159,20 @@ button{
 .hero_content h4 {
     font-size: 1.125rem;
     font-weight: 600;
-    color: var(--purple-500);
+    color: var(--gold);
 }
 
 .hero_content h1 {
     font-size: 3rem;
     font-weight: 700;
     line-height: 3.5rem;
-    color: var(--black-800);
+    color: var(--gold);
 }
 
 .hero_content p {
     font-size: 1.125rem;
     line-height: 1.875rem;
-    color: var(--gray-400);
+    color: var(--gold);
 }
 
 .hero_buttons {
@@ -220,17 +207,13 @@ button{
     }
 }
 
-.float-animation {
-    animation: float 3s ease-in-out infinite;
-}
-
 /* === ABOUT === */
 .about_container {
     margin: 4rem auto;
     display: flex;
     align-items: center;
     gap: 4rem;
-    background-color: var(--gray-200);
+    background-color: var(--purple);
     border-radius: 1rem;
 }
 
@@ -325,13 +308,13 @@ button{
     width: 4rem;
     height: 4rem;
     padding: 0.75rem;
-    background-color: var(--gray-100);
+    background-color: var(--green);
     border-radius: 0.5rem;
     transition: all 0.3s ease;
 }
 
 .social_icon:hover{
-    background-color: var(--purple-600);
+    background-color: var(--purple);
     transform: translateY(-0.25rem);
     box-shadow: var(--shadow-md);
 }
@@ -366,7 +349,7 @@ textarea{
     border: 0.25rem solid var(--gray-200);
     border-radius: 0.5rem;
     font-size: 1rem;
-    background-color: var(--white);
+    background-color: var(--gold);
     transition: border-color 0.3s ease;
 }
 
@@ -438,10 +421,10 @@ form span{
 /* Footer */
 footer{
     text-align: center;
-    padding: 2.5rem;
+    padding: 1rem;
     font-weight: 600;
-    background: linear-gradient(to right top, var(--purple-500), var(--purple-800));
-    color: var(--white);
+    background: linear-gradient(to right top, var(--purple), var(--purple));
+    color: var(--gold);
     margin-top: auto;
 }
 
@@ -518,4 +501,3 @@ footer{
     }
 
 }
-
